UFHT Release v 1.6/src/objects/Endpoint_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the endpoints for web services and authentication information</description>
    <fields>
        <fullName>Endpoint_Url__c</fullName>
        <description>Relative endpoint URL for the web service callout</description>
        <inlineHelpText>Relative endpoint URL for the web service callout</inlineHelpText>
        <label>Endpoint Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the endpoint is active to be used or not</description>
        <inlineHelpText>Indicates whether the endpoint is active to be used or not</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMA_Client_Secret__c</fullName>
        <description>Client secret to be used for authenticating with the LMA org</description>
        <inlineHelpText>Client secret to be used for authenticating with the LMA org</inlineHelpText>
        <label>LMA Client Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Consumer_Key__c</fullName>
        <description>Consumer key to be used for authenticating with the LMA org</description>
        <inlineHelpText>Consumer key to be used for authenticating with the LMA org</inlineHelpText>
        <label>LMA Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Password__c</fullName>
        <description>Password for the user used for authenticating with the LMA org</description>
        <inlineHelpText>Password for the user used for authenticating with the LMA org</inlineHelpText>
        <label>LMA Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Username__c</fullName>
        <description>Username used for authenticating with the LMA org</description>
        <inlineHelpText>Username used for authenticating with the LMA org</inlineHelpText>
        <label>LMA Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Endpoint Settings</label>
</CustomObject>